Blog button length

--- a/Blog.html
+++ b/Blog.html
@@ -143,7 +143,7 @@
         <tbody>
             <tr>
                 <td>
-                    <a class="btn btn-primary" href="#blog1" data-toggle="modal">
+                    <a class="btn btn-primary btnl" href="#blog1" data-toggle="modal">
                         Coming soon!
                         <br>
                     </a>
@@ -151,7 +151,7 @@
             </tr>
             <tr>
                 <td>
-                    <a class="btn btn-primary" href="#blog2" data-toggle="modal">
+                    <a class="btn btn-primary btnl" href="#blog2" data-toggle="modal">
                         Coming soon!
                         <br>
                     </a>
@@ -159,7 +159,7 @@
             </tr>
             <tr>
                 <td>
-                    <a class="btn btn-primary" href="#blog3" data-toggle="modal">
+                    <a class="btn btn-primary btnl" href="#blog3" data-toggle="modal">
                         Coming soon!
                         <br>
                     </a>
@@ -167,7 +167,7 @@
             </tr>
             <tr>
                 <td>
-                    <a class="btn btn-primary" href="#blog4" data-toggle="modal">
+                    <a class="btn btn-primary btnl" href="#blog4" data-toggle="modal">
                         Coming soon!
                         <br>
                     </a>
@@ -175,7 +175,7 @@
             </tr>
             <tr>
                 <td>
-                    <a class="btn btn-primary" href="#blog5" data-toggle="modal">
+                    <a class="btn btn-primary btnl" href="#blog5" data-toggle="modal">
                         Coming soon!
                         <br>
                     </a>
@@ -183,7 +183,7 @@
             </tr>
             <tr>
                 <td>
-                    <a class="btn btn-primary" href="#blog6" data-toggle="modal">
+                    <a class="btn btn-primary btnl" href="#blog6" data-toggle="modal">
                         Coming soon!
                         <br>
                     </a>
