--- a/About.html
+++ b/About.html
@@ -169,7 +169,7 @@
             <p>Reach Fitness,<br>
 	           Sandford Parks Lido,<br>
 	           Cheltenham,<br>
-	           Cheshire,<br>
+	           Gloucestershire,<br>
 	           GL53 7PU<br>
             <br>
             07817 161 441<br>
