--- a/index.html
+++ b/index.html
@@ -267,15 +267,14 @@
                     <div class="left-col col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center-xs">
                         <h3 class="uppercase" style="padding-top:6px;">CONTACT</h3>
                         <p><b>Josh Jones Personal Training</b></p>
-                        <p>Reach Fitness,
-                            <br> Sandford Parks Lido,
-                            <br> Cheltenham,
-                            <br> Cheshire,
-                            <br> GL53 7PU
-                            <br>
-                            <br> 07817 161 441
-                            <br> JoshJonesPT@hotmail.com
-                        </p>
+                        <p>Reach Fitness,<br>
+	                       Sandford Parks Lido,<br>
+	                       Cheltenham,<br>
+	                       Gloucestershire,<br>
+	                       GL53 7PU<br>
+                        <br>
+                        07817 161 441<br>
+                        JoshJonesPT@hotmail.com</p>
                         <br>
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-8 hidden-xs">
