--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>JJ Personal Trainer | About</title>
+    <title>JJ Personal Trainer | Contact</title>
     <link rel="icon" href="JJPT.png">
 
     <!-- Bootstrap Core CSS -->
@@ -100,7 +100,7 @@
                 <p class="text-left">Reach Fitness,<br>
 	           Sandford Parks Lido,<br>
 	           Cheltenham,<br>
-	           Cheshire,<br>
+	           Gloucestershire,<br>
 	           GL53 7PU<br>
             </div>
         </div>
