--- a/About.html
+++ b/About.html
@@ -83,7 +83,7 @@
             <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h2>About Josh</h2>
                 <img class="hidden-xs homepic" src="Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%">
-                <img class="hidden-lg hidden-md hidden-sm homepic" src="Josh-Jones.jpg" alt="JJPT image" width="90%" height="100%">
+                <img class="hidden-xl hidden-lg hidden-md hidden-sm homepic" src="Josh-Jones.jpg" alt="JJPT image" width="90%" height="100%">
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                 <p class="lrg-body">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire where he studied strength and conditioning, program design, nutrition and much more. Josh has put this experience into practical use and is a UK powerlifting champion.  With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>
