--- a/Blog.html
+++ b/Blog.html
@@ -133,7 +133,7 @@
     </table>
     </div>
 
-<div class="hidden-lg hidden-md hidden-sm col-xs-12">
+<div class="hidden-xl hidden-lg hidden-md hidden-sm col-xs-12">
     <table class="table text-center">
         <thead>
             <tr>
