--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    
+    <link rel="apple-touch-icon" type="image/png" href="JJPT.png">
+    
 </head>
 
 <body>
