--- a/Blog.html
+++ b/Blog.html
@@ -25,6 +25,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <link rel="apple-touch-icon" type="image/png" href="JJPT.png">
+    
 </head>
 
 <body>
