--- a/Contact.html
+++ b/Contact.html
@@ -13,10 +13,10 @@
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/CSS/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/JJPT.css?version=1.1" rel="stylesheet">
+    <link href="/CSS/JJPT.css?version=1.1" rel="stylesheet">
 
     <link rel="apple-touch-icon" type="image/png" href="JJPT.png">
     
