--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="images/Slider4.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/Slider4.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
