price page update

--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>JJ Personal Trainer | Contact</title>
+    <title>Josh Jones PT | Contact</title>
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
