--- a/Blog.html
+++ b/Blog.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>JJ Personal Trainer | Blog</title>
+    <title>Josh Jones PT | Blog</title>
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
