--- a/Prices.html
+++ b/Prices.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>JJ Personal Trainer | Contact</title>
+    <title>Josh Jones PT | Prices</title>
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
@@ -69,121 +69,32 @@
     <div class="container">
 
         <div class="row">
-            <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h2>Why Josh Jones PT</h2>
+            <div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h2 class="pageheader">Price List</h2>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <p class="lrg-body">At Josh Jones PT, Josh prides himself on consistently delivering the very best personal training sessions to you. With over 5 Years of experience and completion of over 10,000 PT sessions in the last 1/2 decade, you can be assured your in safe hands, Josh knows what he does works!</p>
-                <p class="lrg-body">Whilst he is sure that there will be Personal Trainers who are cheaper, he is also sure that he is the best around. He believe's the price you pay reflects the service you get, Forgive me if that comes across as arrogant its not meant to. It is born out of assured confidence due to his vast experience and unwavering commitment to delivering the Gold Standard of Personal Training session to you the client, every single time.</p>
-                <p class="lrg-body">Josh is a highly competent, professional, experienced Coach, qualified up to REPS LVL 3 and above.</p>
-                <p class="lrg-body">Becoming a fully fledged Powerlifter and Personal Trainer is an immense achievement. The Personal Trainer price below is indicative of the cost of a Gold Standard Personal Training session(s) with Josh.</p>
+                <p class="lrg-body text-center">-<br>
+                1 session = £35<br>
+                10 sessions = £275 (£27.50 a session)<br>
+                20 sessions = £500 (£25 a session)<br>
+                40 sessions = £900 (£22.50 a session)<br></p>
+                <h3 class="text-center">HIIT</h3>
+                <p class="lrg-body text-center">-<br>
+                30 Min high intensity interval training session perfect for people who are low on time but still want to lose weight and get fit.<br>
+                10 Sessions = £150</p>
+                <h3 class="text-center">Train with me</h3>
+                <p class="lrg-body text-center">-<br>
+                £50<br>
+                In this one off session you get the chance to train with a national level competitive Powerlifter. Learning the focus and motivation needed to achieve your goals. This session can last up to 2 hours and is recommended for people interested in seriously increasing their strength and power.</p>
             </div>
         </div>
-        
-	<div class="row">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h2>Before you start training</h2>
-	</div>
-	</div>
-	<div class ="row">
-	<div class="table-responsive col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<table class="table table-striped">
-            <thead>
-                <tr>
-                <th Width="20%">Service Type</th>
-                <th Width="20%">Duration</th>
-                <th Width="20%">Price</th>
-                <th Width="40%">Discount</th>
-                </tr>
-            </thead>
-				<tbody>
-				<tr>
-				<td>Telephone consultaion</td>
-				<td>N/A</td>
-                <td>Free</td>
-                <td>N/A</td>
-				</tr>
-				<tr>
-				<td>In-depth assesment</td>
-				<td>60 minutes</td>
-                <td>£50</td>
-                <td>Free if you block book a minimum of 10 sessions</td>
-				</tr>
-				<tr>
-				<td>24/7 Personalised eating plans</td>
-				<td>N/A</td>
-                <td>£5 Per day</td>
-                <td>£125 per month</td>
-				</tr>
-				</tbody>
-		</table>
-	</div>
-	</div>
-    <div class="row">
-	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<h2>The price</h2>
-	</div>
-	</div>
-	<div class ="row">
-	<div class="table-responsive col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<table class="table table-striped">
-            <thead>
-                <tr>
-                <th Width="30%">Service Type</th>
-                <th Width="20%">Duration</th>
-                <th Width="20%">Price per session</th>
-                <th Width="30%">The Price per block booking</th>
-                </tr>
-            </thead>
-				<tbody>
-				<tr>
-				<td>Single session</td>
-				<td>60 Minutes</td>
-                <td>£50.00</td>
-                <td>N/A</td>
-				</tr>
-				<tr>
-				<td>Block of 10 sessions (+ 1 FREE)</td>
-				<td>60 Minutes</td>
-                <td>£45.45</td>
-                <td>£500</td>
-				</tr>
-				<tr>
-				<td>Block of 30 sessions (+ 6 FREE)</td>
-				<td>60 Minutes</td>
-                <td>£41.66</td>
-                <td>£1500</td>
-				</tr>
-                <tr>
-				<td>Express session</td>
-				<td>30 Minutes</td>
-                <td>£30.00</td>
-                <td>N/A</td>
-				</tr>
-                <tr>
-				<td>Home training session</td>
-				<td>60 Minutes</td>
-                <td>£75.00</td>
-                <td>N/A</td>
-				</tr>
-                <tr>
-				<td>Group session (1-6 people)</td>
-				<td>60 Minutes</td>
-                <td>£70.00</td>
-                <td>N/A</td>
-				</tr>
-				</tbody>
-		</table>
-	</div>
-	</div>
     
     <div class="row">
-            <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h2>Terms &amp; Conditions</h2>
-            </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <p class="lrg-body">Personal Trainer price: Sessions can be used at your convenience, you will not be charged for anything other than the sessions you use or late cancellations there are no contracts to sign and you have 12 months from the day of purchase to use your block (unless otherwise agreed by Josh Jones PT). Josh Jones PT value your training sessions, therefore cancellation of training sessions must be done 24 hrs prior to the allotted time. Unless this session is rescheduled before the week end (Sunday) this session will be charged at full price.</p>
-                <p class="lrg-body">All block bookings are non transferable and non refundable.</p>
+            <div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h2>Payment</h2>
+                <p class="lrg-body">Please make payments either by cash or bank transfer.</p>
+                <h3>Cancellation</h3>
+                <p class="lrg-body">If you feel the need to cancel a session please do so as soon as possible. Sessions cancelled on the day of the scheduled time are at risk of being charged. </p>
             </div>
     </div>
 
