--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>JJ Personal Trainer</title>
+    <title>Josh Jones PT</title>
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
