--- a/Test Version/index.html
+++ b/Test Version/index.html
@@ -9,16 +9,16 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>JJ Personal Trainer</title>
-    <link rel="icon" href="Images/JJPT.png">
+    <title>BabyOrganic</title>
+    <link rel="icon" href="Images/bo.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/JJPT.css?version=1.1" rel="stylesheet">
+    <link href="css/borg.css?version=1.1" rel="stylesheet">
     
-    <link rel="apple-touch-icon" type="image/png" href="JJPT.png">
+    <link rel="apple-touch-icon" type="image/png" href="bo.png">
     
 </head>
 
@@ -35,7 +35,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><b>Josh Jones PT</b></a>
+                <img class="navbar-brand" src="Images/bo.png">
+                <a class="navbar-brand" href="index.html"><b>BabyOrganic</b></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -44,19 +45,19 @@
                         <a href="About.html">About</a>
                     </li>
                     <li>
-                        <a href="Prices.html">Prices</a>
+                        <a href="Shop.html">Shop</a>
                     </li>
                     <li>
                         <a href="Blog.html">Blog</a>
                     </li>
                     <li>
-                        <a href="Contact.html">Contact</a>
+                        <a href="https://www.youtube.com/"><img alt="follow me on youtube" src="Images/youtube.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="Images/facebook2.png" height='17' width='17' border=0></a>
+                        <a href="https://twitter.com/"><img alt="follow me on twitter" src="Images/twitter2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/joshjonespt"><img alt="follow me on instagram" src="Images/instagram2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.instagram.com/"><img alt="follow me on instagram" src="Images/instagram2.png" height='17' width='17' border=0></a>
                     </li>
                 </ul>
             </div>
@@ -78,19 +79,19 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="images/Slider4.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="images/baby2.jpg" onmouseover="this.src='Images/fruitfly.jpg'" onmouseout="this.src='Images/baby2.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/Slider5.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider5.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/baby1.jpg" onmouseover="this.src='Images/fruitfly.jpg'" onmouseout="this.src='Images/baby1.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/Slider8.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider8.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/baby3.jpg" onmouseover="this.src='Images/fruitfly.jpg'" onmouseout="this.src='Images/baby3.jpg'" width="90%" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
@@ -110,28 +111,29 @@
 
         <div class="row">
             <div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12 ptheader">
-                <h2>PERSONAL TRAINING</h2>
+                <img class="homepic1" height="200px" src="Images/bo.png">
+                <h2>BabyOrganic</h2>
             </div>
             <div class="text-center col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <a id="tester" href="About.html">
-                    <h3 id="head-text" style="color:black;">About Josh</h3>
-                    <img class="homepic" src="Images/Josh-Jones.jpg" alt="JJPT image" width="90%" height="90%">
-                     <p id="sub-text">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire. With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>  
+                    <h3 id="head-text" style="color:black;">About BabyOrganic</h3>
+                    <img class="homepic" src="Images/about.jpg" alt="JJPT image" width="100%" height="100%">
+                     <p id="sub-text">Learn more about BabyOrganic.</p>  
                 </a>      
             </div>
             <div class="clearfix visible-sm"></div>
             <div class="text-center col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <a id="tester" href="Prices.html">
-                    <h3 id="head-text" style="color:black;">Prices</h3>
-                    <img class="homepic" src="Images/programme.jpg" alt="JJPT image" width="90%" height="90%">
-                    <p style="color:black;">Josh personally supports his exclusive clients with bespoke, thoughtfully designed programmes to bring about the most radical body transformation, nutrition and lifestyle changes. Available worldwide...</p>
+                    <h3 id="head-text" style="color:black;">Shop</h3>
+                    <img class="homepic" src="Images/shop.jpg" alt="JJPT image" width="70%" height="70%">
+                    <p style="color:black;">The BabyOrganic shop.</p>
                 </a>
             </div>
             <div class="text-center col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <a id="tester" href="Blog.html">
                     <h3 id="head-text" style="color:black;">Blog</h3>
                     <img class="homepic" src="Images/blog.jpg" alt="JJPT image" width="90%" height="90%">
-                    <p style="color:black;">Here, you'll discover what's new in the fitness world, including the latest views on nutrition and sports supplements as well as little known tips and secrets that will help fast track your success.</p>
+                    <p style="color:black;">Here, you'll discover what's new in the world of BabyOrganic, including the latest views on nutrition and health as well as little known tips and secrets that will help keep babies fighting fit.</p>
                 </a>
             </div>
         </div>
@@ -148,8 +150,8 @@
                     </a>
             </div>
             <div class="text-center col-lg-4 col-md-4 hidden-sm hidden-xs">
-                <h3 style="color:black;">The latest by Josh Jones</h3>
-                <img class="homepic" src="Images/blog1.jpg" alt="JJPT image" width="100%" height="100%">
+                <h3 style="color:black;">The latest by BabyOrganic</h3>
+                <img class="homepic" src="Images/babywriter.jpg" width="100%" height="100%">
                 <a href="#">
                     <p style="color:black;">Sat 01/10/16 - Coming soon!</p>
                 </a>
@@ -164,107 +166,29 @@
 
         <div class="row">
             <div class="text-center col-lg-12 col-md-12 hidden-sm hidden-xs">
-                <h2>INSTAGRAM | <a id="tester" href="https://www.instagram.com/joshjonespt"><span style="color:grey">FOLLOW US</span></a></h2>
+                <h2>INSTAGRAM | <a id="tester" href="https://www.instagram.com/"><span style="color:grey">FOLLOW US</span></a></h2>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <a href="https://www.instagram.com/joshjonespt"><img class="instapic" src="Images/Josh-Jones.jpg" alt="JJPT image" width="100%" height="100%"></a>
+                <a href="https://www.instagram.com/"><img class="instapic" src="Images/fruit1.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <a href="https://www.instagram.com/joshjonespt"><img class="instapic" src="Images/insta1.jpg" alt="JJPT image" width="100%" height="100%"></a>
+                <a href="https://www.instagram.com/"><img class="instapic" src="Images/fruit1.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <a href="https://www.instagram.com/joshjonespt"><img class="instapic" src="Images/insta2.jpg" alt="JJPT image" width="100%" height="100%"></a>
+                <a href="https://www.instagram.com/"><img class="instapic" src="Images/fruit1.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
             <div class="col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <a href="https://www.instagram.com/joshjonespt"><img class="instapic" src="Images/insta3.jpg" alt="JJPT image" width="100%" height="100%"></a>
+                <a href="https://www.instagram.com/"><img class="instapic" src="Images/fruit1.jpg" alt="JJPT image" width="100%" height="100%"></a>
             </div>
         </div>
-
-        <section id="testimonials">
-            <div class="container">
-                <div class="row">
-                    <div class="text-center col-lg-12 col-md-12 hidden-sm hidden-xs">
-                        <h2>TESTIMONIALS</h2>
-                        <div id="testimonialCarousel" class="carousel slide hidden-xs">
-
-                            <!-- Wrapper for Slides -->
-                            <div class="carousel-inner">
-                                <div class="item active">
-                                    <div class="testcarousel"></div>
-                                    <div class="carousel-caption">
-                                        <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
-                                            <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Chris,<br> Walton</h3>
-                                            <img class="homepic" src="Images/cwalton.jpg" alt="JJPT image" width="100%" height="100%">
-                                        </div>
-                                        <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
-                                            <h4 class="uppercase"><span>IT IS THE FIRST TIME IN YEARS THAT I FEEL MYSELF AGAIN</span></h4>
-                                            <p>I want to thank Josh because he was exactly what I needed. Every time I went to see him he would encourage me and as a result I left the gym feeling happier and stronger. He gave me the perfect balance of understanding of my circumstances, but also pushing me each time so I did not make excuses. Josh was amazingly diligent when I had questions. For example, if I had a dinner out, He would immediately look for the restaurant and the menu and always gave me advice with a positive outlook. He would tell me all the things I could eat instead of focusing on what I should not.</p>
-                                            <p>His warm and happy personality made every appointment a real pleasure. Thank you to Josh Jones for your outstanding personal training.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="testcarousel"></div>
-                                    <div class="carousel-caption">
-                                        <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
-                                            <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Alex,<br> Bland</h3>
-                                            <img class="homepic" src="Images/abland.jpg" alt="JJPT image" width="100%" height="100%">
-                                        </div>
-                                        <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
-                                            <h4 class="uppercase"><span>I FOUND THE WHOLE EXPERIENCE LIFE CHANGING</span></h4>
-                                            <p>After going to my first consultation, Josh understood my goals and we got to work. I found the programme rather inspiring as I ate regularly, very well at meal times and still found it easy to shed unwanted fat in the gym.</p>
-                                            <p>Josh's advice and meal plans were easy to understand and follow, with an amount of flexibility so that I found it natural to only concentrate on the variety of food I am allowed to eat. Personal training sessions and telephone calls were very helpful and it was always a real boost to see the results at a weigh in. I found Josh's encouragement and enthusiasm so infectious I would have been mortified if I had let him down by the temptation to eat something I shouldn't.</p>
-                                            <p>I felt it was a team effort with high praise a meaningful reward. It is now a new way of life.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <div class="testcarousel"></div>
-                                    <div class="carousel-caption">
-                                        <div class="col-left-desktop col-md-3 col-sm-3 hidden-xs">
-                                            <h3 class="source uppercase text-right-sm text-right-md text-right-lg text-center-xs">Rachel,<br> Hewitt</h3>
-                                            <img class="homepic" src="Images/rhewitt.jpg" alt="JJPT image" width="100%" height="100%">
-                                        </div>
-                                        <div class="col-right col-md-9 col-sm-9 col-xs-12 text-center-xs">
-                                            <h4 class="uppercase"><span>IF YOU WANT TO LOSE WEIGHT, AND KEEP IT OFF, IN A SIMPLE AND EFFECTIVE WAY THEN THIS IS THE RIGHT STEP FOR YOU.</span></h4>
-                                            <p>Having seen my weight fluctuate over the years and having reached the big 50 I was really looking for sensible diet and fitness advice that worked. A couple of friends recommended the Josh Jones Method to me so I decided to give it a go. I was not disappointed! Gently guided by the wonderful Mr Jones, I lost a stone in weight and am now in a size 8 for the first time in years. Josh was a charming and knowledgeable support who made it all very easy to understand and who encouraged me throughout the 12 week programme. I can't recommend highly enough the principles Josh Jones espouses. If you want to lose weight ,and keep it off, in a simple and effective way then this is the right step for you.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Controls -->
-                            <a class="left carousel-control" href="#testimonialCarousel" data-slide="prev">
-                                <span class="icon-prev"></span>
-                            </a>
-                            <a class="right carousel-control" href="#testimonialCarousel" data-slide="next">
-                                <span class="icon-next"></span>
-                            </a>
-        </div>
-        </div>
-        </div>
-        </div>
-        </section>
 
         <section id="contact">
             <div class="container">
                 <div class="row">
-                    <div class="left-col col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center-xs">
-                        <h3 class="uppercase" style="padding-top:6px;">CONTACT</h3>
-                        <p><b>Josh Jones Personal Training</b></p>
-                        <p>Reach Fitness,<br>
-	                       Sandford Parks Lido,<br>
-	                       Cheltenham,<br>
-	                       Gloucestershire,<br>
-	                       GL53 7PU<br>
+                    <hr>
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                        <p>This site contains affiliate links. For questions about content, photography, or sponsor work, please contact hello@BabyOrganic.com</p>
                         <br>
-                        07817 161 441<br>
-                        JoshJonesPT@hotmail.com</p>
-                        <br>
-                    </div>
-                    <div class="col-lg-8 col-md-8 col-sm-8 hidden-xs">
-                        <br>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2462.202683137132!2d-2.069755684894504!3d51.89376519020171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48711bbee6bd8005%3A0x9933dbdbab3f935a!2sKeynsham+Rd%2C+Cheltenham+GL53+7PU!5e0!3m2!1sen!2suk!4v1470319187467" width="95%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
                     </div>
                     <hr>
                 </div>
@@ -281,7 +205,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <p>Copyright &copy; JJPT 2016</p>
+                    <p>Copyright &copy; BabyOrganic 2016</p>
                 </div>
             </div>
             <!-- /.row -->
