--- a/Blog.html
+++ b/Blog.html
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><b>Josh Jones PT</b></a>
+                <a class="navbar-brand logo" href="index.html"><img src="Images/Josh%20Jones%20Black%20Logo.jpg" alt="JJPT image" height="45px"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
