--- a/Test Version/Contact.html
+++ b/Test Version/Contact.html
@@ -9,16 +9,16 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>BabyOrganic | Contact</title>
-    <link rel="icon" href="Images/bo.png">
+    <title>JJ Personal Trainer | Contact</title>
+    <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/borg.css?version=1.1" rel="stylesheet">
+    <link href="css/JJPT.css?version=1.1" rel="stylesheet">
 
-    <link rel="apple-touch-icon" type="image/png" href="bo.png">
+    <link rel="apple-touch-icon" type="image/png" href="JJPT.png">
     
 </head>
 
@@ -35,8 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img class="navbar-brand" src="Images/bo.png">
-                <a class="navbar-brand" href="index.html"><b>BabyOrganic</b></a>
+                <a class="navbar-brand logo" href="index.html"><img src="Images/Josh%20Jones%20Black%20Logo.jpg" alt="JJPT image" height="45px"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -45,7 +44,7 @@
                         <a href="About.html">About</a>
                     </li>
                     <li>
-                        <a href="Shop.html">Shop</a>
+                        <a href="Prices.html">Prices</a>
                     </li>
                     <li>
                         <a href="Blog.html">Blog</a>
@@ -54,13 +53,10 @@
                         <a href="Contact.html">Contact</a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/"><img alt="follow me on youtube" src="Images/youtube.png" height='17' width='17' border=0></a>
+                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="Images/facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/"><img alt="follow me on twitter" src="Images/twitter2.png" height='17' width='17' border=0></a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/"><img alt="follow me on instagram" src="Images/instagram2.png" height='17' width='17' border=0></a>
+                        <a href="https://www.instagram.com/joshjonespt"><img alt="follow me on instagram" src="Images/instagram2.png" height='17' width='17' border=0></a>
                     </li>
                 </ul>
             </div>
@@ -121,7 +117,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <p>Copyright &copy; BabyOrganic 2016</p>
+                    <p>Copyright &copy; JJPT 2016</p>
                 </div>
             </div>
             <!-- /.row -->
