--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><b>Josh Jones PT</b></a>
+                <a class="navbar-brand logo" href="index.html"><img src="Images/Josh%20Jones%20Black%20Logo.jpg" alt="JJPT image" height="45px"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -110,7 +110,7 @@
 
         <div class="row">
             <div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12 ptheader">
-                <h2>PERSONAL TRAINING</h2>
+                <img src="Images/Josh%20Jones%20Black%20Logo.jpg" alt="JJPT image" height="70px">
             </div>
             <div class="text-center col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <a id="tester" href="About.html">
