--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@
     <!-- Custom CSS -->
     <link href="/CSS/JJPT.css?version=1.1" rel="stylesheet">
 
-        <link rel="apple-touch-icon" type="image/png" href="JJPT.png">
+        <link rel="apple-touch-icon" type="image/png" href="Images/JJPT.png">
     
 </head>
 
