--- a/Test Version/About.html
+++ b/Test Version/About.html
@@ -75,15 +75,15 @@
                 <img class="hidden-xl hidden-lg hidden-md homepic" src="Images/Josh-Jones.jpg" alt="JJPT image" width="90%" height="100%">
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
-                <p class="lrg-body">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire where he studied strength and conditioning, program design, nutrition and much more. Josh has put this experience into practical use and is a UK powerlifting champion.  With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>
+                <p class="lrg-body">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire where he studied strength and conditioning, program design, nutrition and much more. Josh has experience in circuit training, weight loss, strength, muscle building and toning.  With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 hidden-xs">
                 <h2 class="uppercase" style="max-width:100%;margin-top:0px !important;border-top-width:0px;">EXPERT FITNESS, EXPERT NUTRITION, DESIGNED FOR YOUR LIFESTYLE</h2>
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7 hidden-xs">
-                <p>Using his unique integrated method, Josh has worked successfully with numerous high profile clients, constantly evolving his approach to ensure that his clients have access to the most cutting edge and proven methods of body fat reduction and muscle building through his programmes.</p>
-                <p>Working from his Cheltenham office in the UK, Josh’s handpicked team deliver his method in the most professional, accessible and life-changing manner. Discretion is paramount and endorsement is never requested nor used.</p>
-                <p>Josh is also recognised as a UK powerlifting champion, winning multpile awards across several weight divisions.</p>
+                <p>From a young age Josh has enjoyed working with people and has always been motivated to help people achieve their goals. Josh has competed in a range of sports including Rugby, Athletics and Rowing. Josh now competes at a national level in Powerlifting. From this Josh has learnt what it takes to achieve your goals and how to stay motivated through the process.</p>
+                <p>With his friendly and professional personality Josh has helped clients who have wanted to lose weight, train for strength, tone up or just wanted to get fitter. So whatever your goal Josh contact Josh today.</p>
+                <p>Contact Josh for a free consultation to answer any questions you may have about personal training and to discuss those all-important goals.</p>
             </div>
         </div>
         
