--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <a id="tester" href="About.html">
                     <h3 id="head-text" style="color:black;">About Josh</h3>
                     <img class="homepic" src="Images/Josh-Jones.jpg" alt="JJPT image" width="90%" height="90%">
-                     <p id="sub-text">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire. With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>  
+                     <p style="color:black;">Josh is a fully qualified Level 3 personal trainer with a BSc (Hons) Degree in sports coaching from the University of Gloucestershire where he studied strength and conditioning, program design, nutrition and much more. Josh has experience in circuit training, weight loss, strength, muscle building and toning.  With this knowledge Josh will design a personalised program to suit, guide and motivate you every step of the way.</p>  
                 </a>      
             </div>
             <div class="clearfix visible-sm"></div>
