JJPT Media page added

--- a/Contact.html
+++ b/Contact.html
@@ -47,7 +47,7 @@
                         <a href="Prices.html">Prices</a>
                     </li>
                     <li>
-                        <a href="Blog.html">Blog</a>
+                        <a href="Blog.html">Media</a>
                     </li>
                     <li class="active">
                         <a href="Contact.html">Contact</a>
