--- a/Prices.html
+++ b/Prices.html
@@ -47,7 +47,7 @@
                         <a href="Prices.html">Prices</a>
                     </li>
                     <li>
-                        <a href="Blog.html">Blog</a>
+                        <a href="Blog.html">Media</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
@@ -69,24 +69,69 @@
     <div class="container">
 
         <div class="row">
-            <div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h2 class="pageheader">Price List</h2>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <p class="lrg-body text-center">-<br>
-                1 session = £35<br>
-                10 sessions = £275 (£27.50 a session)<br>
-                20 sessions = £500 (£25 a session)<br>
-                40 sessions = £900 (£22.50 a session)<br></p>
-                <h3 class="text-center">HIIT</h3>
-                <p class="lrg-body text-center">-<br>
-                30 Min high intensity interval training session perfect for people who are low on time but still want to lose weight and get fit.<br>
-                10 Sessions = £150</p>
-                <h3 class="text-center">Train with me</h3>
-                <p class="lrg-body text-center">-<br>
-                £50<br>
-                In this one off session you get the chance to train with a national level competitive Powerlifter. Learning the focus and motivation needed to achieve your goals. This session can last up to 2 hours and is recommended for people interested in seriously increasing their strength and power.</p>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<table class="table table-striped text-left">
+                <thead>
+                    <tr>
+                        <th width="25%">Sessions</th>
+                        <th width="25%">Price</th>
+                        <th>Price Per Session</th>
+                    </tr>
+                </thead>
+				<tbody>
+				<tr>
+				<td>1 Session</td>
+				<td>£35</td>
+                <td>£35</td>
+				</tr>
+				<tr>
+				<td>10 Sessions</td>
+				<td>£275</td>
+                <td>£27.50</td>
+				</tr>
+				<tr>
+				<td>20 Sessions</td>
+				<td>£500</td>
+                <td>£25</td>
+				</tr>
+				<tr>
+				<td>40 Sessions</td>
+				<td>£900</td>
+                <td>£22.50</td>
+				</tr>
+				</tbody>
+		</table>
+	</div>
+            
+            <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3>More Options</h3>
             </div>
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 table-responsive">
+		<table class="table table-striped text-left">
+                <thead>
+                    <tr>
+                        <th width="25%">Session</th>
+                        <th width="25%">Price</th>
+                        <th>Info</th>
+                    </tr>
+                </thead>
+				<tbody>
+				<tr>
+				<td>10 HIIT Sessions</td>
+				<td>£150</td>
+                <td>30 Min high intensity interval training session perfect for people who are low on time but still want to lose weight and get fit.</td>
+				</tr>
+				<tr>
+				<td>Train with me</td>
+				<td>£50</td>
+                <td>In this one off session you get the chance to train with a national level competitive Powerlifter. Learning the focus and motivation needed to achieve your goals. This session can last up to 2 hours and is recommended for people interested in seriously increasing their strength and power.</td>
+				</tr>
+				</tbody>
+		</table>
+        </div>
         </div>
     
     <div class="row">
