--- a/Test Version/Contact.html
+++ b/Test Version/Contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>JJ Personal Trainer | Contact</title>
+    <title>Josh Jones PT | Contact</title>
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
@@ -47,7 +47,7 @@
                         <a href="Prices.html">Prices</a>
                     </li>
                     <li>
-                        <a href="Blog.html">Blog</a>
+                        <a href="Blog.html">Media</a>
                     </li>
                     <li class="active">
                         <a href="Contact.html">Contact</a>
