--- a/Blog.html
+++ b/Blog.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JJPT">
     <meta name="author" content="CWalton">
 
-    <title>Josh Jones PT | Blog</title>
+    <title>Josh Jones PT | Media</title>
     <link rel="icon" href="Images/JJPT.png">
 
     <!-- Bootstrap Core CSS -->
@@ -47,7 +47,7 @@
                         <a href="Prices.html">Prices</a>
                     </li>
                     <li class="active">
-                        <a href="Blog.html">Blog</a>
+                        <a href="Blog.html">Media</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
@@ -70,7 +70,7 @@
 
         <div class="row">
             <div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h2>Blog</h2>
+                <h2>Media</h2>
             </div>
         </div>
             
