--- a/Contact.html
+++ b/Contact.html
@@ -73,14 +73,9 @@
                 <h2>Contact</h2>
                 <p>If you would like to learn more about the fitness programmes available or would like to schedule a personal consultation, please contact us.</p>
             </div>
-            <div class="text-center col-lg-3 col-md-3 hidden-sm hidden-xs">
-                <h3>Josh Jones</h3>
-                <img class="homepic" src="Images/joshjones.jpg" alt="JJPT image" width="100%" height="100%">
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-9 hidden-xs">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2462.202683137132!2d-2.069755684894504!3d51.89376519020171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48711bbee6bd8005%3A0x9933dbdbab3f935a!2sKeynsham+Rd%2C+Cheltenham+GL53+7PU!5e0!3m2!1sen!2suk!4v1470319187467" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+                <p class="text-left"><b>Name</b></p>
+                <p class="text-left">Josh Jones</p>
                 <p class="text-left"><b>Phone</b></p>
                 <p class="text-left">07817 161 441</p>
                 <p class="text-left"><b>E-Mail</b></p>
@@ -92,10 +87,13 @@
 	           Gloucestershire,<br>
 	           GL53 7PU<br>
             </div>
+            <div class="col-lg-9 col-md-9 col-sm-9 hidden-xs">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2462.202683137132!2d-2.069755684894504!3d51.89376519020171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48711bbee6bd8005%3A0x9933dbdbab3f935a!2sKeynsham+Rd%2C+Cheltenham+GL53+7PU!5e0!3m2!1sen!2suk!4v1470319187467" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
         </div>
         <div class="row">
             <div class="text-left col-lg-12 col-md-12 hidden-sm hidden-xs">
-                <h2>Reach Fitness Consultation Rooms</h2>      
+                <h3>Reach Fitness Consultation Rooms</h3>      
             </div>
             <div class="col-lg-6 col-md-6 hidden-sm hidden-xs">
                 <img class="homepic" src="Images/consulting-rooms.jpg" alt="JJPT image" width="100%" height="100%">
