--- a/index.html
+++ b/index.html
@@ -44,16 +44,13 @@
                         <a href="About.html">About</a>
                     </li>
                     <li>
-                        <a href="Prices.html">Prices</a>
+                        <a href="Prices.html">Personal Training</a>
                     </li>
                     <li>
                         <a href="Blog.html">Media</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="Images/facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/joshjonespt"><img alt="follow me on instagram" src="Images/instagram2.png" height='17' width='17' border=0></a>
@@ -78,19 +75,19 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/Slider4.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider4.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="images/Slider41.jpg" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider41.jpg'" width="" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/Slider5.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider5.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/Slider51.jpg" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider51.jpg'" width="" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
             <div class="item">
                 <!-- Set the third background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="Images/Slider8.jpg" onmouseover="this.src='Images/Slider.jpg'" onmouseout="this.src='Images/Slider8.jpg'" width="90%" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/Slider81.jpg" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider81.jpg'" width="" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
