--- a/Test Version/About.html
+++ b/Test Version/About.html
@@ -44,16 +44,13 @@
                         <a href="About.html">About</a>
                     </li>
                     <li>
-                        <a href="Prices.html">Prices</a>
+                        <a href="Prices.html">Personal Training</a>
                     </li>
                     <li>
                         <a href="Blog.html">Media</a>
                     </li>
                     <li>
                         <a href="Contact.html">Contact</a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/joshtjjones"><img alt="follow me on facebook" src="Images/facebook2.png" height='17' width='17' border=0></a>
                     </li>
                     <li>
                         <a href="https://www.instagram.com/joshjonespt"><img alt="follow me on instagram" src="Images/instagram2.png" height='17' width='17' border=0></a>
