capital letter in images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <!-- Set the second background image using inline CSS below. -->
-                <div class="fill"><img class="center-block" src="images/Slider41.jpg" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider41.jpg'" width="" height="100%" alt="JJPT image"></div>
+                <div class="fill"><img class="center-block" src="Images/Slider41.jpg" onmouseover="this.src='Images/JJPT.png'" onmouseout="this.src='Images/Slider41.jpg'" width="" height="100%" alt="JJPT image"></div>
                 <div class="carousel-caption">
                 </div>
             </div>
